Update: enhance validation logic in NamesValidator, NotBlankEmailValidator, and OTPCodeValidator